[metadata]
name = bargeparse
version = 0.5.1
author = David Sanders
description = Instrospect function signatures to construct a CLI
url = https://github.com/shangxiao/bargeparse
license = MIT

[options]
packages = bargeparse
python_requires = >=3.6

[options.extras_require]
numpydoc = numpydoc

[flake8]
max-line-length = 88
