[metadata]
name = bargeparse
version = 0.8.2
author = David Sanders
description = Instrospect function signatures to construct a CLI
url = https://github.com/shangxiao/bargeparse
license = MIT
license_file = LICENSE

[options]
packages = bargeparse
python_requires = >=3.6

[flake8]
max-line-length = 88
